Attempt at fixing fixed elements on mobile, part 2

--- a/www/style-dark.linux.css
+++ b/www/style-dark.linux.css
@@ -2611,7 +2611,6 @@ div > .MJXc-display {
 	#post-nav-ui-toggle {
 		visibility: visible;
 		display: inline-block;
-		position: absolute;
 		bottom: 10px;
 		right: 10px;
 		border-radius: 50%;
